--- a/package.json
+++ b/package.json
@@ -3,12 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mui/icons-material": "^5.11.9",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "apexcharts": "^3.37.0",
+    "axios": "^1.3.1",
+    "bootstrap": "^5.2.3",
+    "boxicons": "^2.1.4",
+    "cdbreact": "^1.5.4",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
+    "react-router": "^6.8.0",
+    "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
+    "recoil": "^0.7.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
