--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "react-apexcharts": "^1.4.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.3",
     "react-icons": "^4.7.1",
     "react-router": "^6.8.0",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
     "recoil": "^0.7.6",
+    "semantic-ui-css": "^2.5.0",
+    "semantic-ui-react": "^2.1.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
